--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="galerie">
     <h2>Galerie de peintures</h2>
     <div class="gallery">
-      <img src="FB_IMG_1716387860433.jpg" alt="Œuvre 1">
+<img src="https://ismailbenothman17-code.github.io/ismaelbenothman.github.io/IMG_20210518_123826.jpg">
       <img src="IMG_20210518_123826.jpg" alt="Œuvre 2">
       <img src="IMG_20210827_001306.jpg" alt="Œuvre 3">
       <img src="IMG_20211228_123438.jpg" alt="Œuvre 4">
