--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
       <p>Ismael Ben Othman, né le 1er mai 1982, est un artiste peintre autodidacte tunisien passionné depuis l’enfance par l’art plastique. Membre actif de l’Union des artistes plasticiens tunisiens, il a participé à de nombreuses expositions individuelles et collectives. À travers ses toiles à l'huile, il explore l’émotion, le symbolisme, et l’âme humaine.</p>
     </div>
   </section>
-
+<section id="galerie">
+  <h2>Galerie</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 15px;">
+    <img src="Oeuvre1.jpg" alt="Oeuvre 1" style="width: 200px;">
+    <img src="Oeuvre2.jpg" alt="Oeuvre 2" style="width: 200px;">
+    <img src="Oeuvre3.jpg" alt="Oeuvre 3" style="width: 200px;">
+    <img src="Oeuvre4.jpg" alt="Oeuvre 4" style="width: 200px;">
+    <img src="Oeuvre5.jpg" alt="Oeuvre 5" style="width: 200px;">
+  </div>
+</section>
   <section id="galerie">
     <h2>Galerie de peintures</h2>
     <div class="gallery">
